<resources>
    <string name="app_name">MedOrg</string>
    <string name="title_activity_login_success">MedOrg</string>
    <string name="navigation_drawer_open">Открыть навигацию</string>
    <string name="navigation_drawer_close">Закрыть навигацию</string>
    <string name="nav_header_title">Скоро</string>
    <string name="nav_header_subtitle">email@example.com</string>
    <string name="nav_header_desc">Заголовок навигации</string>
    <string name="action_settings">Настройки</string>
    <string name="login_with">Войти с помощью</string>
    <string name="menu_home">Сканировать QR</string>
    <string name="menu_gallery">Отчеты</string>
    <string name="menu_slideshow">Инструкция</string>
    <string name="qrscanmode">Войти в режим сканирования</string>
    <string name="qr_code_found">QR Code Found</string>
    <string name="scan">Сканировать</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="user_header">Настройки</string>
    <string name="debug_header">Debug Settings</string>
    <!--User Settings-->
    <string name="user_region">Регион</string>
    <string name="user_project">Проект</string>
    <string name="sendWorkTime">Отправить время прихода/ухода.</string>
    <array name="user_region_set">
        <item>По умолчанию</item>
        <item>Южный</item>
        <item>Северный</item>
        <item>Центральный</item>
        <item>Западный</item>
    </array>
    <array name="work_time_mode">
        <item>Приход</item>
        <item>Уход</item>
    </array>
    <string name="work_time_type">Тип:</string>
    <string name="work_time_send">ОТПРАВИТЬ</string>
    <string name="error_u_hacker">Используйте только фирменный QR код от MedOrg</string>
    <string name="wiki_url">https://app.futuregroup.cf/%d0%b8%d0%bd%d1%81%d1%82%d1%80%d1%83%d0%ba%d1%86%d0%b8%d1%8f-%d0%bf%d0%be-%d0%bf%d0%be%d0%bb%d1%8c%d0%b7%d0%be%d0%b2%d0%b0%d0%bd%d0%b8%d1%8e-%d0%bf%d1%80%d0%b8%d0%bb%d0%be%d0%b6%d0%b5%d0%bd%d0%b8z</string>
    <!--Reports-->
    <string name="open_gsheets">Войти в режим Отчетов</string>
    <string name="report_title">Режим отчетов</string>
</resources>