<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/user_header">
        <ListPreference
            android:defaultValue="true"
            android:entries="@array/user_region_set"
            android:entryValues="@array/user_region_set"
            android:key="user_region"
            android:title="@string/user_region" />
    </PreferenceCategory>
    <EditTextPreference
        android:defaultValue="defaultValue"
        android:key="user_project"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/user_project" />
    <PreferenceCategory android:title="Реклама">

        <SwitchPreference
            android:defaultValue="true"
            android:key="switch_preference_1"
            android:title="Включить рекламу" />
    </PreferenceCategory>

</PreferenceScreen>